Revise interview cheat sheet for Senior/Staff roles
Updated the Java Backend/Staff Engineer Interview Cheat Sheet to reflect the latest focus areas and patterns for Senior and Staff roles, including system design, JVM internals, and performance strategies.